Bug fix/text align for remediation  (#71)

--- a/src/components/UI/InformationTabs/InformationTabs.module.css
+++ b/src/components/UI/InformationTabs/InformationTabs.module.css
@@ -144,3 +144,7 @@ code {
 .suppressFindingTitle {
 	text-align: left;
 }
+
+.remediation {
+	text-align: left;
+}
